--- a/Homework 6/homepage.html
+++ b/Homework 6/homepage.html
@@ -32,7 +32,8 @@
         <li>Nathaniel Drew
           <a href="https://www.nathanieldrew.com/">Nathaniel Drew Link</a> </li>
   </ul>
-<h4><link rel="Story Page Link" href="story.html"></h4>
+<h4><a href="story.html">Story page link</a>
+</h4>
 
 </body>
 </html>
