--- a/Homework 14/index.html
+++ b/Homework 14/index.html
@@ -3,10 +3,10 @@
         <title>first p5.js page!</title>
         <script src="js/p5.min.js"></script>
         <!-- create a link to the new class-->
-        <script src="js/rectangle.js"></script>
+        <script src="js/fish.js"></script>
         <script src="js/sketch.js"></script>
     </head>
     <body>
 
     </body>
-</html>>
+</html>
