--- a/Homework 14/index.html
+++ b/Homework 14/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>first p5.js page!</title>
+        <title>p5.js fishies</title>
         <script src="js/p5.min.js"></script>
         <!-- create a link to the new class-->
         <script src="js/fish.js"></script>
